865bjyy12 Fix overlap issue for filter with announcement bar

--- a/assets/patterns-toolkit.css
+++ b/assets/patterns-toolkit.css
@@ -155,6 +155,12 @@ svg {
   padding: 0;
 }
 @media (min-width: 40em) {
+    .de-PageWrap-headerSecondary .de-MenuBar-action{
+        min-height: 55px !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     .de-MenuBar {
         height: 58.448px;
     }
